--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "bootstrap": "^4.5.0",
     "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
